# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Quantum Control — Cargo Configuration
[package]
name = "scpn-quantum-engine"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "scpn_quantum_engine"
# `cdylib` is the Python extension module built by `maturin`.
# `rlib` is required to link the crate into `benches/`, `tests/`
# and any other Rust binary — criterion benchmarks depend on it.
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[features]
# PyO3 `extension-module` is only needed when compiling the Python
# shared object. `cargo bench` / `cargo test` without `--features
# extension-module` link against a regular libpython (or no libpython
# at all for non-PyO3 targets). `maturin develop` / `maturin build`
# must be invoked with `--features extension-module`.
default = []
extension-module = ["pyo3/extension-module"]
# The IBM latency-runner bin is the crate's only network consumer. Gating
# its HTTP stack behind a feature keeps reqwest (and any TLS backend)
# entirely out of the Python-wheel builds — the manylinux cross containers
# cannot compile aws-lc-sys/openssl, and the cdylib never needs TLS.
latency-runner = ["dep:reqwest"]

[dependencies]
pyo3 = { version = "0.29", default-features = false, features = ["macros"] }
ndarray = "0.16"
numpy = "0.29"
num-complex = "0.4"
rand = "0.10"
rayon = "1.10"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
# rustls instead of native-tls (no system OpenSSL needed); optional so the
# wheel builds never compile an HTTP/TLS stack at all (latency-runner only).
reqwest = { version = "0.13", default-features = false, features = ["blocking", "form", "json", "rustls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.35.0"
scpn-quantum-program-ad-replay = { path = "program_ad_replay", features = ["pyo3"] }

[[bin]]
name = "ibm_runtime_latency_runner"
required-features = ["latency-runner"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_paths"
harness = false
