# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Quantum Control — Program AD fuzz configuration

[package]
name = "scpn-quantum-engine-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ndarray = "=0.16.1"
scpn-quantum-engine = { path = ".." }
scpn-quantum-studio-wasm-kernel = { path = "../studio_wasm_kernel" }

[[bin]]
name = "program_ad_ir"
path = "fuzz_targets/program_ad_ir.rs"
test = false
doc = false
bench = false

[[bin]]
name = "studio_kuramoto_input"
path = "fuzz_targets/studio_kuramoto_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ml_dsa_ntt"
path = "fuzz_targets/ml_dsa_ntt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "knm_validators"
path = "fuzz_targets/knm_validators.rs"
test = false
doc = false
bench = false
