# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Quantum Control — bounded program-AD effect-IR replay (pure, wasm-safe)

[package]
name = "scpn-quantum-program-ad-replay"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Bounded, bit-exact program-AD effect-IR value+gradient replay, free of Python bindings so it compiles to WASM"

[lib]
crate-type = ["rlib"]

[features]
default = []
# Thin PyO3 wrappers over the pure replay; enabled by the engine crate, absent
# for the WASM build.
pyo3 = ["dep:pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.35.0"
pyo3 = { version = "0.29", default-features = false, features = ["macros"], optional = true }
