# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Quantum Control — Studio WASM program-AD replay kernel manifest

[package]
name = "scpn-quantum-studio-program-ad-wasm"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Standalone WASM kernel that replays the bounded program-AD value+gradient in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
scpn-quantum-program-ad-replay = { path = "../program_ad_replay" }
