# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Quantum Control — Studio WASM verifier kernel manifest

[package]
name = "scpn-quantum-studio-wasm-kernel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "WASM-safe recompute verifier kernel for QUANTUM Studio compile claims"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10"
